[project]
name = "respawn"
version = "0.1.0"
description = "A bot intended to Squander the Spawners"
authors = [
    {name = "Juniper _",email = "basil.squared1@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord (>=2.3.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
